Fixed icon spacing

--- a/styles.css
+++ b/styles.css
@@ -298,7 +298,7 @@ body::-webkit-scrollbar-thumb {
   margin: 10px;
   width: 100%;
   font-size: 20px;
-  margin-bottom: 10px;
+  margin-bottom: 0;
 }
 
 .exp-title {
